fix: changing get users by facility id to get users by facility code
