# docs/swagger.json
@@ -48,8 +48,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "facility_id",
-                        "name": "facility_id",
+                        "description": "facility_code",
+                        "name": "facility_code",
                         "in": "query",
                         "required": true
                     },
